[gd_scene load_steps=14 format=2]

[ext_resource path="res://DungeonCrawler/UI/Login/Login.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_10.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button_press.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/ThaleahFat_35.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_8.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/l0_sprite_mainui1-19201080.png" type="Texture" id=6]
[ext_resource path="res://Assets/l1_sprite_mainui1-19201080.png" type="Texture" id=7]
[ext_resource path="res://Assets/v1.1 dungeon crawler 16x16 pixel pack/ui (new)/menu_button.png" type="Texture" id=8]
[ext_resource path="res://DungeonCrawler/UI/Animation/FadeIn.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_6.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/ui/menu_button.png" type="Texture" id=11]
[ext_resource path="res://Assets/ui/menu_button_press.png" type="Texture" id=12]

[sub_resource type="GDScript" id=1]
script/source = "extends ParallaxBackground


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
export (float) var scrolling_speed = 500.0

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	scroll_offset.x += scrolling_speed + delta
"

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = SubResource( 1 )
scrolling_speed = 1.0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 255, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 128.227, 71.0345 )
scale = Vector2( 0.133, 0.133 )
texture = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoContainer" type="CenterContainer" parent="Background"]
margin_left = 23.0
margin_top = 10.0
margin_right = 233.0
margin_bottom = 50.0
rect_min_size = Vector2( 210, 35 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Background/LogoContainer"]
margin_top = 2.0
margin_right = 210.0
margin_bottom = 37.0
rect_min_size = Vector2( 210, 35 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.152941, 0.152941, 0.133333, 1 )
custom_colors/font_color_shadow = Color( 0.803922, 0.898039, 0.556863, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "GET-THAT-TREE"
align = 1
valign = 1
uppercase = true

[node name="LoginBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -25.0
margin_right = 72.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailBox" type="HBoxContainer" parent="LoginBox"]
margin_right = 145.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="LoginBox/EmailBox"]
margin_top = 3.0
margin_right = 66.0
margin_bottom = 18.0
rect_min_size = Vector2( 66, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "Email: "
align = 2
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="LoginBox/EmailBox"]
margin_left = 70.0
margin_right = 145.0
margin_bottom = 21.0
rect_min_size = Vector2( 75, 21 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )

[node name="PasswordBox" type="HBoxContainer" parent="LoginBox"]
margin_top = 25.0
margin_right = 145.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="LoginBox/PasswordBox"]
margin_top = 3.0
margin_right = 66.0
margin_bottom = 18.0
rect_min_size = Vector2( 66, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.960784, 0.960784, 0.921569, 1 )
text = "Password:"
align = 2
valign = 1
uppercase = true

[node name="LineEdit" type="LineEdit" parent="LoginBox/PasswordBox"]
margin_left = 70.0
margin_right = 145.0
margin_bottom = 21.0
rect_min_size = Vector2( 75, 21 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
secret = true

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.5
margin_top = 25.0
margin_right = 72.5
margin_bottom = 10.0
rect_min_size = Vector2( 145, 20 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="TextureButton" parent="ButtonContainer"]
margin_right = 70.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="ButtonContainer/LoginButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.121569, 1 )
text = "Login"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegisterButton" type="TextureButton" parent="ButtonContainer"]
margin_left = 75.0
margin_right = 145.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="ButtonContainer/RegisterButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.667419
margin_bottom = -0.667419
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.137255, 0.137255, 0.121569, 1 )
text = "Register"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.5
margin_top = -25.0
margin_right = 72.5
margin_bottom = -10.0
rect_min_size = Vector2( 145, 15 )
custom_fonts/font = ExtResource( 10 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForgetPasswordLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 61.0
margin_top = 49.0
margin_right = 126.0
margin_bottom = 59.0
custom_fonts/normal_font = ExtResource( 10 )
custom_colors/default_color = Color( 0.0784314, 0.0941176, 0.905882, 1 )
bbcode_enabled = true
bbcode_text = "[u]Forget password?[/u]"
text = "Forget password?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForgetPasswordButton" type="TextureButton" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = 189.0
margin_top = 121.0
margin_right = 249.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 9 )]
visible = false

[connection signal="pressed" from="ButtonContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="ButtonContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="ForgetPasswordButton" to="." method="_on_ForgetPasswordButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
